Closed Bug 630288 Opened 14 years ago Closed 14 years ago

MiniDumpCallback in nsExceptionHandler.cpp uses too much stack

Categories

(Toolkit :: Crash Reporting, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- final+

People

(Reporter: billm, Assigned: billm)

References

Details

(Whiteboard: [softblocker][fixed-in-tracemonkey])

Attachments

(1 file)

Breakpad allocates 8K of stack, and given the two paths it allocates, it uses more than 8K.
Attached patch fixSplinter Review
This moves these buffers out of the stack.
Attachment #508480 - Flags: review?(ted.mielczarek)
Assignee: nobody → wmccloskey
Comment on attachment 508480 [details] [diff] [review] fix You'll need approval here, but if this is blocking a blocker, then that should be fairly easy. Thanks for finding this!
Attachment #508480 - Flags: review?(ted.mielczarek)
Attachment #508480 - Flags: review+
Attachment #508480 - Flags: approval2.0?
This is important because the patch in bug 609104 is orange without this fix.
We're sure/pretty sure that if two plugins simultaneously crash, we won't be overwriting these buffers? (Are all crashes processed on the same thread?)
Blocks a blocker, so its a blocker.
blocking2.0: --- → final+
Whiteboard: [softblocker]
Attachment #508480 - Flags: approval2.0?
Whiteboard: [softblocker] → [softblocker][fixed-in-tracemonkey]
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: