Bug 630288 - Reduce stack usage of MiniDumpCallback (r=ted)